# material-qt-decorations

./: .travis.yml  CMakeLists.txt  README.md
declarative/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  windowdecorations.cpp  windowdecorations.h
decorations/: CMakeLists.txt  main.cpp  materialdecoration.h
